--- a/lab3/task3/signin.html
+++ b/lab3/task3/signin.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container">
-  <img src="plant.jpg" alt="" class="background-img">
+  <img src="img.webp" alt="" class="background-img">
   <section>
     <form action="" class="section-body">
       <p class="form-title">Sign In</p>
